Improved collision detection for melee, multiplay lobby build

--- a/TheLastBastion/Config/DefaultEngine.ini
+++ b/TheLastBastion/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/StartMenu_Map.StartMenu_Map
-EditorStartupMap=/Game/Maps/StartMenu_Map.StartMenu_Map
+EditorStartupMap=/Game/Maps/Gameplay_Dev.Gameplay_Dev
 GlobalDefaultGameMode="/Script/TheLastBastion.TheLastBastionGameMode"
 GameInstanceClass=/Game/Blueprints/GI_TheLastBastion_BP.GI_TheLastBastion_BP_C
 TransitionMap=/Game/Maps/LoadingMap.LoadingMap
@@ -169,4 +169,9 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+-PhysicalSurfaces=(Type=SurfaceType1,Name="Flesh")
+-PhysicalSurfaces=(Type=SurfaceType2,Name="Metal")
++PhysicalSurfaces=(Type=SurfaceType1,Name="Flesh")
++PhysicalSurfaces=(Type=SurfaceType2,Name="Metal")
+
 
