--- a/TheLastBastion/Config/DefaultEngine.ini
+++ b/TheLastBastion/Config/DefaultEngine.ini
@@ -34,51 +34,6 @@ SteamDevAppId=480
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
-[/Script/Engine.PhysicsSettings]
-DefaultGravityZ=-2000.000000
-DefaultTerminalVelocity=4000.000000
-DefaultFluidFriction=0.300000
-SimulateScratchMemorySize=262144
-RagdollAggregateThreshold=4
-TriangleMeshTriangleMinAreaThreshold=5.000000
-bEnableAsyncScene=False
-bEnableShapeSharing=False
-bEnablePCM=True
-bEnableStabilization=False
-bWarnMissingLocks=True
-bEnable2DPhysics=False
-LockedAxis=Invalid
-DefaultDegreesOfFreedom=Full3D
-BounceThresholdVelocity=200.000000
-FrictionCombineMode=Average
-RestitutionCombineMode=Average
-MaxAngularVelocity=3600.000000
-MaxDepenetrationVelocity=0.000000
-ContactOffsetMultiplier=0.020000
-MinContactOffset=2.000000
-MaxContactOffset=8.000000
-bSimulateSkeletalMeshOnDedicatedServer=True
-DefaultShapeComplexity=CTF_UseSimpleAndComplex
-bDefaultHasComplexCollision=True
-bSuppressFaceRemapTable=False
-bSupportUVFromHitResults=False
-bDisableActiveActors=False
-bDisableCCD=False
-bEnableEnhancedDeterminism=False
-MaxPhysicsDeltaTime=0.033333
-bSubstepping=False
-bSubsteppingAsync=False
-MaxSubstepDeltaTime=0.016667
-MaxSubsteps=6
-SyncSceneSmoothingFactor=0.000000
-AsyncSceneSmoothingFactor=0.990000
-InitialAverageFrameRate=0.016667
-PhysXTreeRebuildRate=10
--PhysicalSurfaces=(Type=SurfaceType1,Name="Flesh")
--PhysicalSurfaces=(Type=SurfaceType2,Name="Metal")
-+PhysicalSurfaces=(Type=SurfaceType1,Name="Flesh")
-+PhysicalSurfaces=(Type=SurfaceType2,Name="Metal")
-
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
 -Profiles=(Name="BlockAll",CollisionEnabled=QueryAndPhysics,ObjectTypeName="WorldStatic",CustomResponses=,HelpMessage="WorldStatic object that blocks all actors by default. All new custom channels will use its own default response. ",bCanModify=False)
@@ -142,11 +97,14 @@ PhysXTreeRebuildRate=10
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel4,Name="EnemyWeapon",DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False)
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel5,Name="Enemy",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel6,Name="EnemyDetector",DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False)
--EditProfiles=(Name="NoCollision",CustomResponses=((Channel="EnemyBody",Response=ECR_Ignore)))
+-EditProfiles=(Name="NoCollision",CustomResponses=((Channel="EnemyBody",Response=ECR_Ignore),(Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Ignore)))
 -EditProfiles=(Name="Pawn",CustomResponses=((Channel="EnemyBody",Response=ECR_Ignore)))
-+EditProfiles=(Name="NoCollision",CustomResponses=((Channel="EnemyBody",Response=ECR_Ignore)))
+-EditProfiles=(Name="BlockAll",CustomResponses=((Channel="EnemyBody")))
+-EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="Enemy",Response=ECR_Overlap)))
++EditProfiles=(Name="NoCollision",CustomResponses=((Channel="EnemyBody",Response=ECR_Ignore),(Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Ignore)))
 +EditProfiles=(Name="Pawn",CustomResponses=((Channel="EnemyBody",Response=ECR_Ignore)))
 +EditProfiles=(Name="BlockAll",CustomResponses=((Channel="EnemyBody")))
++EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="Enemy",Response=ECR_Overlap)))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
@@ -173,5 +131,50 @@ PhysXTreeRebuildRate=10
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 +CollisionChannelRedirects=(OldName="DamageReceiver",NewName="HeroBody")
 +CollisionChannelRedirects=(OldName="DamagReporter",NewName="HeroWeapon")
+
+[/Script/Engine.PhysicsSettings]
+DefaultGravityZ=-2000.000000
+DefaultTerminalVelocity=4000.000000
+DefaultFluidFriction=0.300000
+SimulateScratchMemorySize=262144
+RagdollAggregateThreshold=4
+TriangleMeshTriangleMinAreaThreshold=5.000000
+bEnableAsyncScene=False
+bEnableShapeSharing=False
+bEnablePCM=True
+bEnableStabilization=False
+bWarnMissingLocks=True
+bEnable2DPhysics=False
+LockedAxis=Invalid
+DefaultDegreesOfFreedom=Full3D
+BounceThresholdVelocity=200.000000
+FrictionCombineMode=Average
+RestitutionCombineMode=Average
+MaxAngularVelocity=3600.000000
+MaxDepenetrationVelocity=0.000000
+ContactOffsetMultiplier=0.020000
+MinContactOffset=2.000000
+MaxContactOffset=8.000000
+bSimulateSkeletalMeshOnDedicatedServer=True
+DefaultShapeComplexity=CTF_UseSimpleAndComplex
+bDefaultHasComplexCollision=True
+bSuppressFaceRemapTable=False
+bSupportUVFromHitResults=False
+bDisableActiveActors=False
+bDisableCCD=False
+bEnableEnhancedDeterminism=False
+MaxPhysicsDeltaTime=0.033333
+bSubstepping=False
+bSubsteppingAsync=False
+MaxSubstepDeltaTime=0.016667
+MaxSubsteps=6
+SyncSceneSmoothingFactor=0.000000
+AsyncSceneSmoothingFactor=0.990000
+InitialAverageFrameRate=0.016667
+PhysXTreeRebuildRate=10
+-PhysicalSurfaces=(Type=SurfaceType1,Name="Flesh")
+-PhysicalSurfaces=(Type=SurfaceType2,Name="Metal")
++PhysicalSurfaces=(Type=SurfaceType1,Name="Flesh")
++PhysicalSurfaces=(Type=SurfaceType2,Name="Metal")
 
 
