--- a/TheLastBastion/Config/DefaultEngine.ini
+++ b/TheLastBastion/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/StartMenu_Map.StartMenu_Map
-EditorStartupMap=/Game/Maps/Gameplay_Dev.Gameplay_Dev
+EditorStartupMap=/Game/Maps/SinglePlayer.SinglePlayer
 GlobalDefaultGameMode="/Script/TheLastBastion.TheLastBastionGameMode"
 GameInstanceClass=/Game/Blueprints/GI_TheLastBastion_BP.GI_TheLastBastion_BP_C
 TransitionMap=/Game/Maps/LoadingMap.LoadingMap
@@ -34,6 +34,51 @@ SteamDevAppId=480
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
+[/Script/Engine.PhysicsSettings]
+DefaultGravityZ=-2000.000000
+DefaultTerminalVelocity=4000.000000
+DefaultFluidFriction=0.300000
+SimulateScratchMemorySize=262144
+RagdollAggregateThreshold=4
+TriangleMeshTriangleMinAreaThreshold=5.000000
+bEnableAsyncScene=False
+bEnableShapeSharing=False
+bEnablePCM=True
+bEnableStabilization=False
+bWarnMissingLocks=True
+bEnable2DPhysics=False
+LockedAxis=Invalid
+DefaultDegreesOfFreedom=Full3D
+BounceThresholdVelocity=200.000000
+FrictionCombineMode=Average
+RestitutionCombineMode=Average
+MaxAngularVelocity=3600.000000
+MaxDepenetrationVelocity=0.000000
+ContactOffsetMultiplier=0.020000
+MinContactOffset=2.000000
+MaxContactOffset=8.000000
+bSimulateSkeletalMeshOnDedicatedServer=True
+DefaultShapeComplexity=CTF_UseSimpleAndComplex
+bDefaultHasComplexCollision=True
+bSuppressFaceRemapTable=False
+bSupportUVFromHitResults=False
+bDisableActiveActors=False
+bDisableCCD=False
+bEnableEnhancedDeterminism=False
+MaxPhysicsDeltaTime=0.033333
+bSubstepping=False
+bSubsteppingAsync=False
+MaxSubstepDeltaTime=0.016667
+MaxSubsteps=6
+SyncSceneSmoothingFactor=0.000000
+AsyncSceneSmoothingFactor=0.990000
+InitialAverageFrameRate=0.016667
+PhysXTreeRebuildRate=10
+-PhysicalSurfaces=(Type=SurfaceType1,Name="Flesh")
+-PhysicalSurfaces=(Type=SurfaceType2,Name="Metal")
++PhysicalSurfaces=(Type=SurfaceType1,Name="Flesh")
++PhysicalSurfaces=(Type=SurfaceType2,Name="Metal")
+
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
 -Profiles=(Name="BlockAll",CollisionEnabled=QueryAndPhysics,ObjectTypeName="WorldStatic",CustomResponses=,HelpMessage="WorldStatic object that blocks all actors by default. All new custom channels will use its own default response. ",bCanModify=False)
@@ -54,10 +99,10 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 -Profiles=(Name="Vehicle",CollisionEnabled=QueryAndPhysics,ObjectTypeName="Vehicle",CustomResponses=,HelpMessage="Vehicle object that blocks Vehicle, WorldStatic, and WorldDynamic. All other channels will be set to default.",bCanModify=False)
 -Profiles=(Name="UI",CollisionEnabled=QueryOnly,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Overlap),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap)),HelpMessage="WorldStatic object that overlaps all actors by default. All new custom channels will use its own default response. ",bCanModify=False)
 -Profiles=(Name="HeroWeapon",CollisionEnabled=NoCollision,ObjectTypeName="HeroWeapon",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="EnemyBody",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Ignore)),HelpMessage="Only Overlap With EnemyBody",bCanModify=True)
--Profiles=(Name="HeroBody",CollisionEnabled=QueryOnly,ObjectTypeName="HeroBody",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="EnemyWeapon",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Ignore)),HelpMessage="Only Overlap with Enemy Weapon",bCanModify=True)
--Profiles=(Name="EnemyBody",CollisionEnabled=QueryOnly,ObjectTypeName="EnemyBody",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="HeroWeapon",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Ignore)),HelpMessage="Enemy Body Only React to Hero Weapon",bCanModify=True)
+-Profiles=(Name="HeroBody",CollisionEnabled=QueryOnly,ObjectTypeName="HeroBody",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="EnemyWeapon",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Ignore)),HelpMessage="Only Overlap with Enemy Weapon",bCanModify=True)
+-Profiles=(Name="EnemyBody",CollisionEnabled=QueryOnly,ObjectTypeName="EnemyBody",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="HeroWeapon",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Ignore)),HelpMessage="Enemy Body Only React to Hero Weapon",bCanModify=True)
 -Profiles=(Name="EnemyWeapon",CollisionEnabled=NoCollision,ObjectTypeName="EnemyWeapon",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="HeroBody",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Ignore)),HelpMessage="Only Overlap to Hero Body",bCanModify=True)
--Profiles=(Name="Enemy",CollisionEnabled=QueryAndPhysics,ObjectTypeName="Enemy",CustomResponses=((Channel="Camera",Response=ECR_Ignore),(Channel="EnemyDetector",Response=ECR_Overlap)),HelpMessage="An Enemy Pawn",bCanModify=True)
+-Profiles=(Name="Enemy",CollisionEnabled=QueryAndPhysics,ObjectTypeName="Enemy",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="EnemyDetector",Response=ECR_Overlap)),HelpMessage="An Enemy Pawn",bCanModify=True)
 -Profiles=(Name="EnemyDetector",CollisionEnabled=QueryOnly,ObjectTypeName="EnemyDetector",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Overlap)),HelpMessage="Only onverlap with enemy",bCanModify=True)
 -Profiles=(Name="HUD",CollisionEnabled=NoCollision,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Ignore)),HelpMessage="Ignore All",bCanModify=True)
 +Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
@@ -79,10 +124,10 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 +Profiles=(Name="Vehicle",CollisionEnabled=QueryAndPhysics,ObjectTypeName="Vehicle",CustomResponses=,HelpMessage="Vehicle object that blocks Vehicle, WorldStatic, and WorldDynamic. All other channels will be set to default.",bCanModify=False)
 +Profiles=(Name="UI",CollisionEnabled=QueryOnly,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Overlap),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap)),HelpMessage="WorldStatic object that overlaps all actors by default. All new custom channels will use its own default response. ",bCanModify=False)
 +Profiles=(Name="HeroWeapon",CollisionEnabled=NoCollision,ObjectTypeName="HeroWeapon",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="EnemyBody",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Ignore)),HelpMessage="Only Overlap With EnemyBody",bCanModify=True)
-+Profiles=(Name="HeroBody",CollisionEnabled=QueryOnly,ObjectTypeName="HeroBody",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="EnemyWeapon",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Ignore)),HelpMessage="Only Overlap with Enemy Weapon",bCanModify=True)
-+Profiles=(Name="EnemyBody",CollisionEnabled=QueryOnly,ObjectTypeName="EnemyBody",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="HeroWeapon",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Ignore)),HelpMessage="Enemy Body Only React to Hero Weapon",bCanModify=True)
++Profiles=(Name="HeroBody",CollisionEnabled=QueryOnly,ObjectTypeName="HeroBody",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="EnemyWeapon",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Ignore)),HelpMessage="Only Overlap with Enemy Weapon",bCanModify=True)
++Profiles=(Name="EnemyBody",CollisionEnabled=QueryOnly,ObjectTypeName="EnemyBody",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="HeroWeapon",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Ignore)),HelpMessage="Enemy Body Only React to Hero Weapon",bCanModify=True)
 +Profiles=(Name="EnemyWeapon",CollisionEnabled=NoCollision,ObjectTypeName="EnemyWeapon",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="HeroBody",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Ignore)),HelpMessage="Only Overlap to Hero Body",bCanModify=True)
-+Profiles=(Name="Enemy",CollisionEnabled=QueryAndPhysics,ObjectTypeName="Enemy",CustomResponses=((Channel="Camera",Response=ECR_Ignore),(Channel="EnemyDetector",Response=ECR_Overlap)),HelpMessage="An Enemy Pawn",bCanModify=True)
++Profiles=(Name="Enemy",CollisionEnabled=QueryAndPhysics,ObjectTypeName="Enemy",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="EnemyDetector",Response=ECR_Overlap)),HelpMessage="An Enemy Pawn",bCanModify=True)
 +Profiles=(Name="EnemyDetector",CollisionEnabled=QueryOnly,ObjectTypeName="EnemyDetector",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Overlap)),HelpMessage="Only onverlap with enemy",bCanModify=True)
 +Profiles=(Name="HUD",CollisionEnabled=NoCollision,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Ignore)),HelpMessage="Ignore All",bCanModify=True)
 -DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,Name="HeroBody",DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False)
@@ -132,48 +177,4 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 +CollisionChannelRedirects=(OldName="DamageReceiver",NewName="HeroBody")
 +CollisionChannelRedirects=(OldName="DamagReporter",NewName="HeroWeapon")
 
-[/Script/Engine.PhysicsSettings]
-DefaultGravityZ=-2000.000000
-DefaultTerminalVelocity=4000.000000
-DefaultFluidFriction=0.300000
-SimulateScratchMemorySize=262144
-RagdollAggregateThreshold=4
-TriangleMeshTriangleMinAreaThreshold=5.000000
-bEnableAsyncScene=False
-bEnableShapeSharing=False
-bEnablePCM=True
-bEnableStabilization=False
-bWarnMissingLocks=True
-bEnable2DPhysics=False
-LockedAxis=Invalid
-DefaultDegreesOfFreedom=Full3D
-BounceThresholdVelocity=200.000000
-FrictionCombineMode=Average
-RestitutionCombineMode=Average
-MaxAngularVelocity=3600.000000
-MaxDepenetrationVelocity=0.000000
-ContactOffsetMultiplier=0.020000
-MinContactOffset=2.000000
-MaxContactOffset=8.000000
-bSimulateSkeletalMeshOnDedicatedServer=True
-DefaultShapeComplexity=CTF_UseSimpleAndComplex
-bDefaultHasComplexCollision=True
-bSuppressFaceRemapTable=False
-bSupportUVFromHitResults=False
-bDisableActiveActors=False
-bDisableCCD=False
-bEnableEnhancedDeterminism=False
-MaxPhysicsDeltaTime=0.033333
-bSubstepping=False
-bSubsteppingAsync=False
-MaxSubstepDeltaTime=0.016667
-MaxSubsteps=6
-SyncSceneSmoothingFactor=0.000000
-AsyncSceneSmoothingFactor=0.990000
-InitialAverageFrameRate=0.016667
-PhysXTreeRebuildRate=10
--PhysicalSurfaces=(Type=SurfaceType1,Name="Flesh")
--PhysicalSurfaces=(Type=SurfaceType2,Name="Metal")
-+PhysicalSurfaces=(Type=SurfaceType1,Name="Flesh")
-+PhysicalSurfaces=(Type=SurfaceType2,Name="Metal")
 
