--- a/TheLastBastion/Config/DefaultGame.ini
+++ b/TheLastBastion/Config/DefaultGame.ini
@@ -9,4 +9,6 @@ InsertPack=(PackSource="StarterContent.upack,PackName="StarterContent")
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_DebugGame
 IncludeCrashReporter=True
+FullRebuild=True
+IncludeDebugFiles=True
 
