--- a/TheLastBastion/Config/DefaultEngine.ini
+++ b/TheLastBastion/Config/DefaultEngine.ini
@@ -133,6 +133,10 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 +CollisionChannelRedirects=(OldName="DamageReceiver",NewName="HeroBody")
 +CollisionChannelRedirects=(OldName="DamagReporter",NewName="HeroWeapon")
 
+[/Script/Engine.StreamingSettings]
+s.EventDrivenLoaderEnabled=False
+s.AsyncLoadingThreadEnabled=True
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-2000.000000
 DefaultTerminalVelocity=4000.000000
