--- a/TheLastBastion/Config/DefaultEngine.ini
+++ b/TheLastBastion/Config/DefaultEngine.ini
@@ -38,6 +38,51 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 s.EventDrivenLoaderEnabled=False
 s.AsyncLoadingThreadEnabled=True
 
+[/Script/Engine.PhysicsSettings]
+DefaultGravityZ=-2000.000000
+DefaultTerminalVelocity=4000.000000
+DefaultFluidFriction=0.300000
+SimulateScratchMemorySize=262144
+RagdollAggregateThreshold=4
+TriangleMeshTriangleMinAreaThreshold=5.000000
+bEnableAsyncScene=False
+bEnableShapeSharing=False
+bEnablePCM=True
+bEnableStabilization=False
+bWarnMissingLocks=True
+bEnable2DPhysics=False
+LockedAxis=Invalid
+DefaultDegreesOfFreedom=Full3D
+BounceThresholdVelocity=200.000000
+FrictionCombineMode=Average
+RestitutionCombineMode=Average
+MaxAngularVelocity=3600.000000
+MaxDepenetrationVelocity=0.000000
+ContactOffsetMultiplier=0.020000
+MinContactOffset=2.000000
+MaxContactOffset=8.000000
+bSimulateSkeletalMeshOnDedicatedServer=True
+DefaultShapeComplexity=CTF_UseSimpleAndComplex
+bDefaultHasComplexCollision=True
+bSuppressFaceRemapTable=False
+bSupportUVFromHitResults=False
+bDisableActiveActors=False
+bDisableCCD=False
+bEnableEnhancedDeterminism=False
+MaxPhysicsDeltaTime=0.033333
+bSubstepping=False
+bSubsteppingAsync=False
+MaxSubstepDeltaTime=0.016667
+MaxSubsteps=6
+SyncSceneSmoothingFactor=0.000000
+AsyncSceneSmoothingFactor=0.990000
+InitialAverageFrameRate=0.016667
+PhysXTreeRebuildRate=10
+-PhysicalSurfaces=(Type=SurfaceType1,Name="Flesh")
+-PhysicalSurfaces=(Type=SurfaceType2,Name="Metal")
++PhysicalSurfaces=(Type=SurfaceType1,Name="Flesh")
++PhysicalSurfaces=(Type=SurfaceType2,Name="Metal")
+
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
 -Profiles=(Name="BlockAll",CollisionEnabled=QueryAndPhysics,ObjectTypeName="WorldStatic",CustomResponses=((Channel="HeroBody"),(Channel="EnemyBody")),HelpMessage="WorldStatic object that blocks all actors by default. All new custom channels will use its own default response. ",bCanModify=False)
@@ -64,9 +109,9 @@ s.AsyncLoadingThreadEnabled=True
 -Profiles=(Name="Enemy",CollisionEnabled=QueryOnly,ObjectTypeName="Enemy",CustomResponses=((Channel="Camera",Response=ECR_Ignore),(Channel="EnemyDetector",Response=ECR_Overlap)),HelpMessage="An Enemy Pawn",bCanModify=True)
 -Profiles=(Name="EnemyDetector",CollisionEnabled=QueryOnly,ObjectTypeName="EnemyDetector",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Overlap),(Channel="Hero",Response=ECR_Ignore),(Channel="Ally",Response=ECR_Overlap)),HelpMessage="Only onverlap with enemy",bCanModify=True)
 -Profiles=(Name="Shield",CollisionEnabled=QueryOnly,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="HeroWeapon"),(Channel="EnemyWeapon"),(Channel="Enemy",Response=ECR_Ignore),(Channel="Hero",Response=ECR_Ignore),(Channel="Ally",Response=ECR_Ignore)),HelpMessage="Preset for Hero and Enemy Shield",bCanModify=True)
--Profiles=(Name="GroupTrigger",CollisionEnabled=QueryOnly,ObjectTypeName="GroupTrigger",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Ignore),(Channel="GroupTrigger",Response=ECR_Overlap),(Channel="Hero",Response=ECR_Overlap),(Channel="Ally",Response=ECR_Ignore)),HelpMessage="Trigger to init group combat",bCanModify=True)
+-Profiles=(Name="GroupTrigger",CollisionEnabled=QueryOnly,ObjectTypeName="GroupTrigger",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Overlap),(Channel="GroupTrigger",Response=ECR_Overlap),(Channel="Hero",Response=ECR_Overlap),(Channel="Ally",Response=ECR_Overlap)),HelpMessage="Trigger to init group combat",bCanModify=True)
 -Profiles=(Name="Hero",CollisionEnabled=QueryOnly,ObjectTypeName="Hero",CustomResponses=((Channel="Camera",Response=ECR_Ignore),(Channel="GroupTrigger",Response=ECR_Overlap)),HelpMessage="An Friendly Pawn",bCanModify=True)
--Profiles=(Name="Ally",CollisionEnabled=QueryOnly,ObjectTypeName="Ally",CustomResponses=((Channel="Camera",Response=ECR_Ignore)),HelpMessage="Ally",bCanModify=True)
+-Profiles=(Name="Ally",CollisionEnabled=QueryOnly,ObjectTypeName="Ally",CustomResponses=((Channel="Camera",Response=ECR_Ignore),(Channel="GroupTrigger",Response=ECR_Overlap)),HelpMessage="Ally",bCanModify=True)
 +Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
 +Profiles=(Name="BlockAll",CollisionEnabled=QueryAndPhysics,ObjectTypeName="WorldStatic",CustomResponses=((Channel="HeroBody"),(Channel="EnemyBody")),HelpMessage="WorldStatic object that blocks all actors by default. All new custom channels will use its own default response. ",bCanModify=False)
 +Profiles=(Name="OverlapAll",CollisionEnabled=QueryOnly,ObjectTypeName="WorldStatic",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Overlap),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Overlap)),HelpMessage="WorldStatic object that overlaps all actors by default. All new custom channels will use its own default response. ",bCanModify=False)
@@ -89,12 +134,12 @@ s.AsyncLoadingThreadEnabled=True
 +Profiles=(Name="HeroBody",CollisionEnabled=QueryOnly,ObjectTypeName="HeroBody",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="EnemyWeapon",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Ignore),(Channel="Hero",Response=ECR_Ignore),(Channel="Ally",Response=ECR_Ignore)),HelpMessage="Only Overlap with Enemy Weapon",bCanModify=True)
 +Profiles=(Name="EnemyBody",CollisionEnabled=QueryOnly,ObjectTypeName="EnemyBody",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="HeroWeapon",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Ignore),(Channel="Hero",Response=ECR_Ignore),(Channel="Ally",Response=ECR_Ignore)),HelpMessage="Enemy Body Only React to Hero Weapon",bCanModify=True)
 +Profiles=(Name="EnemyWeapon",CollisionEnabled=NoCollision,ObjectTypeName="EnemyWeapon",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="HeroBody",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Ignore),(Channel="Hero",Response=ECR_Ignore)),HelpMessage="Only Overlap to Hero Body",bCanModify=True)
-+Profiles=(Name="Enemy",CollisionEnabled=QueryOnly,ObjectTypeName="Enemy",CustomResponses=((Channel="Camera",Response=ECR_Ignore),(Channel="EnemyDetector",Response=ECR_Overlap)),HelpMessage="An Enemy Pawn",bCanModify=True)
++Profiles=(Name="Enemy",CollisionEnabled=QueryOnly,ObjectTypeName="Enemy",CustomResponses=((Channel="Camera",Response=ECR_Ignore),(Channel="EnemyDetector",Response=ECR_Overlap),(Channel="GroupTrigger",Response=ECR_Overlap)),HelpMessage="An Enemy Pawn",bCanModify=True)
 +Profiles=(Name="EnemyDetector",CollisionEnabled=QueryOnly,ObjectTypeName="EnemyDetector",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Overlap),(Channel="Hero",Response=ECR_Ignore),(Channel="Ally",Response=ECR_Overlap)),HelpMessage="Only onverlap with enemy",bCanModify=True)
 +Profiles=(Name="Shield",CollisionEnabled=QueryOnly,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="HeroWeapon"),(Channel="EnemyWeapon"),(Channel="Enemy",Response=ECR_Ignore),(Channel="Hero",Response=ECR_Ignore),(Channel="Ally",Response=ECR_Ignore)),HelpMessage="Preset for Hero and Enemy Shield",bCanModify=True)
-+Profiles=(Name="GroupTrigger",CollisionEnabled=QueryOnly,ObjectTypeName="GroupTrigger",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Ignore),(Channel="GroupTrigger",Response=ECR_Overlap),(Channel="Hero",Response=ECR_Overlap),(Channel="Ally",Response=ECR_Ignore)),HelpMessage="Trigger to init group combat",bCanModify=True)
++Profiles=(Name="GroupTrigger",CollisionEnabled=QueryOnly,ObjectTypeName="GroupTrigger",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Overlap),(Channel="GroupTrigger",Response=ECR_Overlap),(Channel="Hero",Response=ECR_Overlap),(Channel="Ally",Response=ECR_Overlap)),HelpMessage="Trigger to init group combat",bCanModify=True)
 +Profiles=(Name="Hero",CollisionEnabled=QueryOnly,ObjectTypeName="Hero",CustomResponses=((Channel="Camera",Response=ECR_Ignore),(Channel="GroupTrigger",Response=ECR_Overlap)),HelpMessage="An Friendly Pawn",bCanModify=True)
-+Profiles=(Name="Ally",CollisionEnabled=QueryOnly,ObjectTypeName="Ally",CustomResponses=((Channel="Camera",Response=ECR_Ignore)),HelpMessage="Ally",bCanModify=True)
++Profiles=(Name="Ally",CollisionEnabled=QueryOnly,ObjectTypeName="Ally",CustomResponses=((Channel="Camera",Response=ECR_Ignore),(Channel="GroupTrigger",Response=ECR_Overlap)),HelpMessage="Ally",bCanModify=True)
 -DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,Name="HeroBody",DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False)
 -DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,Name="HeroWeapon",DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False)
 -DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,Name="EnemyBody",DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False)
@@ -157,50 +202,5 @@ s.AsyncLoadingThreadEnabled=True
 +CollisionChannelRedirects=(OldName="DamagReporter",NewName="HeroWeapon")
 +CollisionChannelRedirects=(OldName="GroupBattleTrigger",NewName="GroupTiggerVolumn")
 +CollisionChannelRedirects=(OldName="GroupTiggerVolumn",NewName="GroupTriggerVolumn")
-
-[/Script/Engine.PhysicsSettings]
-DefaultGravityZ=-2000.000000
-DefaultTerminalVelocity=4000.000000
-DefaultFluidFriction=0.300000
-SimulateScratchMemorySize=262144
-RagdollAggregateThreshold=4
-TriangleMeshTriangleMinAreaThreshold=5.000000
-bEnableAsyncScene=False
-bEnableShapeSharing=False
-bEnablePCM=True
-bEnableStabilization=False
-bWarnMissingLocks=True
-bEnable2DPhysics=False
-LockedAxis=Invalid
-DefaultDegreesOfFreedom=Full3D
-BounceThresholdVelocity=200.000000
-FrictionCombineMode=Average
-RestitutionCombineMode=Average
-MaxAngularVelocity=3600.000000
-MaxDepenetrationVelocity=0.000000
-ContactOffsetMultiplier=0.020000
-MinContactOffset=2.000000
-MaxContactOffset=8.000000
-bSimulateSkeletalMeshOnDedicatedServer=True
-DefaultShapeComplexity=CTF_UseSimpleAndComplex
-bDefaultHasComplexCollision=True
-bSuppressFaceRemapTable=False
-bSupportUVFromHitResults=False
-bDisableActiveActors=False
-bDisableCCD=False
-bEnableEnhancedDeterminism=False
-MaxPhysicsDeltaTime=0.033333
-bSubstepping=False
-bSubsteppingAsync=False
-MaxSubstepDeltaTime=0.016667
-MaxSubsteps=6
-SyncSceneSmoothingFactor=0.000000
-AsyncSceneSmoothingFactor=0.990000
-InitialAverageFrameRate=0.016667
-PhysXTreeRebuildRate=10
--PhysicalSurfaces=(Type=SurfaceType1,Name="Flesh")
--PhysicalSurfaces=(Type=SurfaceType2,Name="Metal")
-+PhysicalSurfaces=(Type=SurfaceType1,Name="Flesh")
-+PhysicalSurfaces=(Type=SurfaceType2,Name="Metal")
 
 
