--- a/TheLastBastion/Config/DefaultEngine.ini
+++ b/TheLastBastion/Config/DefaultEngine.ini
@@ -205,7 +205,13 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 -PhysicalSurfaces=(Type=SurfaceType1,Name="Flesh")
 -PhysicalSurfaces=(Type=SurfaceType2,Name="Metal")
+-PhysicalSurfaces=(Type=SurfaceType3,Name="LightShield")
+-PhysicalSurfaces=(Type=SurfaceType4,Name="HeavyShield")
+-PhysicalSurfaces=(Type=SurfaceType5,Name="Ice")
 +PhysicalSurfaces=(Type=SurfaceType1,Name="Flesh")
 +PhysicalSurfaces=(Type=SurfaceType2,Name="Metal")
++PhysicalSurfaces=(Type=SurfaceType3,Name="LightShield")
++PhysicalSurfaces=(Type=SurfaceType4,Name="HeavyShield")
++PhysicalSurfaces=(Type=SurfaceType5,Name="Ice")
 
 
