--- a/TheLastBastion/Config/DefaultEngine.ini
+++ b/TheLastBastion/Config/DefaultEngine.ini
@@ -14,6 +14,8 @@ MinimumiOSVersion=IOS_8
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/TheLastBastion")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="TheLastBastionGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="TheLastBastionCharacter")
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=30.000000),UpperBound=(Type=Exclusive,Value=90.000000))
+MinDesiredFrameRate=60.000000
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -37,57 +39,6 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 [/Script/Engine.StreamingSettings]
 s.EventDrivenLoaderEnabled=False
 s.AsyncLoadingThreadEnabled=True
-
-[/Script/Engine.PhysicsSettings]
-DefaultGravityZ=-2000.000000
-DefaultTerminalVelocity=4000.000000
-DefaultFluidFriction=0.300000
-SimulateScratchMemorySize=262144
-RagdollAggregateThreshold=4
-TriangleMeshTriangleMinAreaThreshold=5.000000
-bEnableAsyncScene=False
-bEnableShapeSharing=False
-bEnablePCM=True
-bEnableStabilization=False
-bWarnMissingLocks=True
-bEnable2DPhysics=False
-LockedAxis=Invalid
-DefaultDegreesOfFreedom=Full3D
-BounceThresholdVelocity=200.000000
-FrictionCombineMode=Average
-RestitutionCombineMode=Average
-MaxAngularVelocity=3600.000000
-MaxDepenetrationVelocity=0.000000
-ContactOffsetMultiplier=0.020000
-MinContactOffset=2.000000
-MaxContactOffset=8.000000
-bSimulateSkeletalMeshOnDedicatedServer=True
-DefaultShapeComplexity=CTF_UseSimpleAndComplex
-bDefaultHasComplexCollision=True
-bSuppressFaceRemapTable=False
-bSupportUVFromHitResults=False
-bDisableActiveActors=False
-bDisableCCD=False
-bEnableEnhancedDeterminism=False
-MaxPhysicsDeltaTime=0.033333
-bSubstepping=False
-bSubsteppingAsync=False
-MaxSubstepDeltaTime=0.016667
-MaxSubsteps=6
-SyncSceneSmoothingFactor=0.000000
-AsyncSceneSmoothingFactor=0.990000
-InitialAverageFrameRate=0.016667
-PhysXTreeRebuildRate=10
--PhysicalSurfaces=(Type=SurfaceType1,Name="Flesh")
--PhysicalSurfaces=(Type=SurfaceType2,Name="Metal")
--PhysicalSurfaces=(Type=SurfaceType3,Name="LightShield")
--PhysicalSurfaces=(Type=SurfaceType4,Name="HeavyShield")
--PhysicalSurfaces=(Type=SurfaceType5,Name="Ice")
-+PhysicalSurfaces=(Type=SurfaceType1,Name="Flesh")
-+PhysicalSurfaces=(Type=SurfaceType2,Name="Metal")
-+PhysicalSurfaces=(Type=SurfaceType3,Name="LightShield")
-+PhysicalSurfaces=(Type=SurfaceType4,Name="HeavyShield")
-+PhysicalSurfaces=(Type=SurfaceType5,Name="Ice")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Ignore)),HelpMessage="No Collision",bCanModify=False)
@@ -216,4 +167,53 @@ PhysXTreeRebuildRate=10
 +CollisionChannelRedirects=(OldName="GroupBattleTrigger",NewName="GroupTiggerVolumn")
 +CollisionChannelRedirects=(OldName="GroupTiggerVolumn",NewName="GroupTriggerVolumn")
 
-
+[/Script/Engine.PhysicsSettings]
+DefaultGravityZ=-2000.000000
+DefaultTerminalVelocity=4000.000000
+DefaultFluidFriction=0.300000
+SimulateScratchMemorySize=262144
+RagdollAggregateThreshold=4
+TriangleMeshTriangleMinAreaThreshold=5.000000
+bEnableAsyncScene=False
+bEnableShapeSharing=False
+bEnablePCM=True
+bEnableStabilization=False
+bWarnMissingLocks=True
+bEnable2DPhysics=False
+LockedAxis=Invalid
+DefaultDegreesOfFreedom=Full3D
+BounceThresholdVelocity=200.000000
+FrictionCombineMode=Average
+RestitutionCombineMode=Average
+MaxAngularVelocity=3600.000000
+MaxDepenetrationVelocity=0.000000
+ContactOffsetMultiplier=0.020000
+MinContactOffset=2.000000
+MaxContactOffset=8.000000
+bSimulateSkeletalMeshOnDedicatedServer=True
+DefaultShapeComplexity=CTF_UseSimpleAndComplex
+bDefaultHasComplexCollision=True
+bSuppressFaceRemapTable=False
+bSupportUVFromHitResults=False
+bDisableActiveActors=False
+bDisableCCD=False
+bEnableEnhancedDeterminism=False
+MaxPhysicsDeltaTime=0.033333
+bSubstepping=False
+bSubsteppingAsync=False
+MaxSubstepDeltaTime=0.016667
+MaxSubsteps=6
+SyncSceneSmoothingFactor=0.000000
+AsyncSceneSmoothingFactor=0.990000
+InitialAverageFrameRate=0.016667
+PhysXTreeRebuildRate=10
+-PhysicalSurfaces=(Type=SurfaceType1,Name="Flesh")
+-PhysicalSurfaces=(Type=SurfaceType2,Name="Metal")
+-PhysicalSurfaces=(Type=SurfaceType3,Name="LightShield")
+-PhysicalSurfaces=(Type=SurfaceType4,Name="HeavyShield")
+-PhysicalSurfaces=(Type=SurfaceType5,Name="Ice")
++PhysicalSurfaces=(Type=SurfaceType1,Name="Flesh")
++PhysicalSurfaces=(Type=SurfaceType2,Name="Metal")
++PhysicalSurfaces=(Type=SurfaceType3,Name="LightShield")
++PhysicalSurfaces=(Type=SurfaceType4,Name="HeavyShield")
++PhysicalSurfaces=(Type=SurfaceType5,Name="Ice")
