--- a/TheLastBastion/Config/DefaultEngine.ini
+++ b/TheLastBastion/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/StartMenu_Map.StartMenu_Map
-EditorStartupMap=/Game/Maps/SinglePlayer.SinglePlayer
+EditorStartupMap=/Game/Maps/GameWorld.GameWorld
 GlobalDefaultGameMode="/Script/TheLastBastion.TheLastBastionGameMode"
 GameInstanceClass=/Game/Blueprints/GI_TheLastBastion_BP.GI_TheLastBastion_BP_C
 TransitionMap=/Game/Maps/LoadingMap.LoadingMap
