range group ai update

--- a/TheLastBastion/Config/DefaultEngine.ini
+++ b/TheLastBastion/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/StartMenu_Map.StartMenu_Map
-EditorStartupMap=/Game/Maps/GameWorld.GameWorld
+EditorStartupMap=/Game/Maps/SinglePlayer.SinglePlayer
 GlobalDefaultGameMode="/Script/TheLastBastion.TheLastBastionGameMode"
 GameInstanceClass=/Game/Blueprints/GI_TheLastBastion_BP.GI_TheLastBastion_BP_C
 TransitionMap=/Game/Maps/LoadingMap.LoadingMap
@@ -227,5 +227,4 @@ PhysXTreeRebuildRate=10
 +PhysicalSurfaces=(Type=SurfaceType3,Name="LightShield")
 +PhysicalSurfaces=(Type=SurfaceType4,Name="HeavyShield")
 +PhysicalSurfaces=(Type=SurfaceType5,Name="Ice")
-
 
